# organise_tv_shows

./: .gitignore  .tool-versions  Brewfile  Pipfile  README.md  __main__.py  config.py  config.yml.dist  meda_organiser.py  organise_tv_shows.config.yml.dist  organise_tv_shows.py  pushover_client.py  setup.cfg  tvdb_client.py
organise_tv_shows/: __main__.py  args.py  config.py  main.py
organise_tv_shows/clients/: pushover_client.py  tvdb_client_ext.py
organise_tv_shows/processor/: media.py  processor.py
organise_tv_shows/processor/steps/: filename_step.py  hash_cleanup_step.py  hash_step.py  load_series_config_step.py  log_step.py  match_step.py  md5_cleanup_step.py  md5_step.py  organise_step.py  pushover_step.py  resolve_step.py  step.py
scripts/: build.sh
