[metadata]
name = organise_tv_shows
version = attr: organise_tv_shows.__version__
author = Cameron Murphy
author_email = camurphy@gmail.com
description = A CLI tool to organise episodes of TV shows into your library.
long_description = file: README.md
keywords = tv, tvdb, show, episode, library, plex
license = MIT
classifiers =
    Programming Language :: Python :: 3
project_urls =
    GitHub = https://github.com/cameronmurphy/organise_tv_shows

[options]
packages = find:
install_requires =
    pydantic<2
    pyyaml
    requests
    tvdb-v4-official
python_requires = >=3.8

[options.packages.find]
include =
    organise_tv_shows
    organise_tv_shows.*

[options.entry_points]
console_scripts =
    organise_tv_shows = organise_tv_shows.__main__:main
